--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .main{
     width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpwIqr_wt8wlQ5r-Oa5gENa4frN7Ny93Sp0xpqa_4vOiBdLdew5EQCiGca&s=10);
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(iya.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
